--- a/baike.html
+++ b/baike.html
@@ -42,7 +42,7 @@
             <!--百度header-->
             <div class="layout">
                 <div class="searchbar searchbar-new searchbar-main searchbar-large">
-                    <div class="logo-container" tilt>
+                    <div class="logo-container">
                         <a class="logo inblock" title="到百科首页" href="">
                             <span class="baike-logo"><img src="img/百度百科.jpg" width="135" height="44"></span>
                         </a>
@@ -65,15 +65,72 @@
     <div class="bluefenge">
         <div class="navbar">
             <div class="navbar-bg">
-                <div class="bluebar">
-                    <dl class="index ">
-                        <dt><a href="">首页</a></dt>
-                        <dd>
-                            <div><a href="">历史上的今天</a></div>
-                            <div><a href="">百科冷知识</a></div>
-                            <div><a href="">图解百科</a></div>
-                        </dd>
-                    </dl>
+                <div class="navbar-bg-top">
+                    <div class="blue-bar">
+                        <dl class="index">
+                            <dt><a href="">首页</a></dt>
+                            <dd>
+                                <div><a href="">历史上的今天</a></div>
+                                <div><a href="">百科冷知识</a></div>
+                                <div><a href="">图解百科</a></div>
+                            </dd>
+                        </dl>
+                        <dl class="cat">
+                            <dt><a>分类</a></dt>
+                            <dd>
+                                <div><a href="">艺术</a></div>
+                                <div><a href="">科学</a></div>
+                                <div><a href="">自然</a></div>
+                                <div><a href="">文化</a></div>
+                                <div><a href="">地理</a></div>
+                                <div><a href="">生活</a></div>
+                                <div><a href="">社会</a></div>
+                                <div><a href="">人物</a></div>
+                                <div><a href="">经济</a></div>
+                                <div><a href="">体育</a></div>
+                                <div><a href="">历史</a></div>
+                            </dd>
+                        </dl>
+                        <dl class="second-know">
+                            <dt><a>秒懂百科</a></dt>
+                            <dd>
+                                <div><a href="">懂啦</a></div>
+                                <div><a href="">秒懂本尊答</a></div>
+                                <div><a href="">秒懂大师说</a></div>
+                                <div><a href="">秒懂看瓦特</a></div>
+                                <div><a href="">秒懂五千年</a></div>
+                                <div><a href="">秒懂全视界</a></div>
+                            </dd>
+                        </dl>
+                        <dl class="special">
+                            <dt><a>特色百科</a></dt>
+                            <dd>
+                                <div><a href="">数字博物馆</a></div>
+                                <div><a href="">非遗百科</a></div>
+                                <div><a href="">城市百科</a></div>
+                                <div><a href="">恐龙百科</a></div>
+                                <div><a href="">多肉百科</a></div>
+                            </dd>
+                        </dl>
+                        <dl class="user">
+                            <dt><a>用户</a></dt>
+                            <dd>
+                                <div><a href="">蝌蚪团</a></div>
+                                <div><a href="">燃梦计划</a></div>
+                                <div><a href="">分类达人</a></div>
+                                <div><a href="">百科任务</a></div>
+                                <div><a href="">百科商城</a></div>
+                            </dd>
+                        </dl>
+                        <dl class="cooperation">
+                            <dt><a>权威合作</a></dt>
+                            <dd>
+                                <div><a href="">合作模式</a></div>
+                                <div><a href="">常见问题</a></div>
+                                <div><a href="">联系方式</a></div>
+                            </dd>
+                        </dl>
+                    </div>
                 </div>
             </div>
         </div>
@@ -81,7 +138,7 @@
     <!-- 科普中国-->
     <div>
         <div>
-            <div class="bg"><img src="img/科普中国.png"></div>
+            <div class="bg"><img src="img/科普中国.png" id="kepu"></div>
         </div>
     </div>
     <!--侧边分享栏-->
