--- a/baike.html
+++ b/baike.html
@@ -11,6 +11,7 @@
     <link rel="stylesheet" type="text/css" href="css/share.css">
     <link rel="stylesheet" type="text/css" href="css/body.css">
     <link rel="stylesheet" type="text/css" href="css/classbar.css">
+    <link rel="stylesheet" type="text/css" href="css/content.css">
 </head>
 
 <body class="general">
@@ -136,7 +137,7 @@
         </div>
     </div>
     <!-- 科普中国-->
-    <div>
+    <div name="body">
         <div>
             <div class="bg"><img src="img/科普中国.png" id="kepu"></div>
         </div>
@@ -146,6 +147,18 @@
         <span class="title">分享</span>
         <div class="side-border">
             <div class="triangle"></div>
+            <a class="qzone">
+                <img src="img/qzone.jpg" id="qzone">
+            </a>
+            <a class="sina">
+                <img src="img/sina.jpg" id="sina">
+            </a>
+            <a class="wechat">
+                <img src="img/wechat.jpg" id="wechat">
+            </a>
+            <a class="qq">
+                <img src="img/qq.jpg" id="qq">
+            </a>
         </div>
     </div>
 </body>
