--- a/baike.html
+++ b/baike.html
@@ -7,11 +7,17 @@
     <title>光子卫星_百度百科</title>
     <link rel="shortcut icon" href="img\favicon.ico">
     <link rel="stylesheet" type="text/css" href="css/topbar.css">
+    <!--导航栏-->
     <link rel="stylesheet" type="text/css" href="css/header.css">
+    <!--百科头部(导航加搜索框)-->
     <link rel="stylesheet" type="text/css" href="css/share.css">
+    <!--侧边分享栏-->
     <link rel="stylesheet" type="text/css" href="css/body.css">
+    <!--整体部分-->
     <link rel="stylesheet" type="text/css" href="css/classbar.css">
+    <!--蓝色分类栏-->
     <link rel="stylesheet" type="text/css" href="css/content.css">
+    <!--内容-->
 </head>
 
 <body class="general">
