--- a/baike.html
+++ b/baike.html
@@ -142,24 +142,42 @@
             </div>
         </div>
     </div>
-    <!-- 科普中国-->
+    <!-- 内容栏-->
     <div>
-        <div name="body">
+        <div>
             <div>
-                <div class="bg"><img src="img/科普中国.png" id="kepu"></div>
+                <!--背景图-->
+                <div class="bg" id="kepu">
+                    <div class="layout">
+                        <ul class="v-image" style="opacity: 1;">
+                            <li>
+                                <a href="">
+                                    <!--视频图片-->
+                                    <img src="img/视频图片.jpg" width="195px">
+                                </a>
+                            </li>
+                        </ul>
+                    </div>
+                </div>
+                <div style="position:relative;margin-top:-260px;"></div>
             </div>
         </div>
         <div class="content-wrapper">
             <div class="content">
                 <div class="main-content">
-                    <dl>
-                        <dd>
+                    <a class="expert"></a>
+                    <dl class="guangzi">
+                        <dd class="g-title">
                             <h1>光子卫星</h1>
-                            <a>编辑
-                            </a>
-                            <a>锁定</a>
+                            <a style="display: inline;">锁定</a>
                         </dd>
                     </dl>
+                    <div class="summary">
+                        <div>“光子”、“光子”M 系列卫星是俄罗斯“中央专业设计局
+                            -进步”国家火箭航天科研生产中心研制的科学卫星，用于进行太空科学技术实验、生产各种工业和科学材料和生物制剂，以及开展国际合作项目。<sup>[1]</sup>
+                        </div>
+                    </div>
+                    <!--目录-->
                     <div class="catalog">
                         <div class="lemma-catalog">
                             <h2 class="block-title">目录</h2>
@@ -167,26 +185,149 @@
                                 <ol>
                                     <li class="level1">
                                         <span class="index">1</span>
-                                        <span class="text"><a href="#1">简介</a></span>
+                                        <span class="text"><a href="">简介</a></span>
                                     </li>
                                     <li class="level1">
                                         <span class="index">2</span>
-                                        <span class="text"><a href="#2">型号与发射时间</a></span>
+                                        <span class="text"><a href="">型号与发射时间</a></span>
                                     </li>
                                 </ol>
                                 <ol>
                                     <li class="level1">
                                         <span class="index">3</span>
-                                        <span class="text"><a href="#3">“光子”M4卫星结构</a></span>
+                                        <span class="text"><a href="">“光子”M4卫星结构</a></span>
                                     </li>
                                 </ol>
                                 <ol>
                                     <li class="level1">
                                         <span class="index">4</span>
-                                        <span class="text"><a href="#4">“光子”M4科学试验任务</a></span>
+                                        <span class="text"><a href="">“光子”M4科学试验任务</a></span>
                                     </li>
                                 </ol>
-
+                            </div>
+                        </div>
+                    </div>
+                    <div class="intro">
+                        <h2 class="title-text">简介</h2>
+                    </div>
+                    <p>
+                        在1985-1999年期间，俄罗斯发射12颗“光子”卫星，在2005-2007年发射了“光子”M1、M2卫星（表1），这些卫星进行了下列6类科学实验
+                        ：①开展用大规模定向结晶方法获得半导体材料的技术实验 ；②培养不同物质晶体 ；③获得生物活性物质 ；④研究失重物理问题 ；⑤开展细胞生物学实验 ；⑥研究开放宇宙空间对生物体的影响。来自<a
+                            href="">俄罗斯</a>、<a href="">比利时</a>、<a href="">瑞典</a>、<a href="">西班牙</a>、<a
+                            href="">意大利</a>、<a href="">英国</a>、<a href="">德国</a>、<a href="">加拿大</a>、<a href="">荷兰</a>、<a
+                            href="">美国</a>、<a href="">法国</a>、<a href="">捷克斯洛伐克</a>等许多国家的专家学者和科学设备研制人员参与了相关工作。
+                    </p>
+                    <div class="intro">
+                        <h2 class="title-text">型号与发射时间</h2>
+                    </div>
+                    <p>“光子”1--1985年 “光子”6--1990年 “光子”11--1997 年</p>
+                    <p>“光子”2--1986年 “光子”7--1991年 “光子”12--1999 年</p>
+                    <p>“光子”3--1987年 “光子”8--1992 年 “光子”M1 --</p>
+                    <p>“光子”4--1988年 “光子”9--1994 年 “光子”M1--2005 年</p>
+                    <p>“光子”5--1989年 “光子”10--1995 年 “光子”M1--2007 年</p>
+                    <div class="intro">
+                        <h2 class="title-text">“光子”M4卫星结构</h2>
+                    </div>
+                    <div>
+                        <div style="width:220px; float: right;">
+                            <a href="">
+                                <img src="img/卫星.jpg" style="width:220px;height:158px;">
+                            </a>
+                        </div>
+                        <p>
+                            为了在太空生产技术实验领域继续研究新材料和高纯物质，俄罗斯“中央专业设计局 - 进步”国家火箭航天科研生产中心以“生物”M 卫星为基础，最新研制了“光子”M4
+                            卫星，该航天器能够实施更大规模的航天技术、生物技技、材料科学方面的计划项目。“光子”M4 卫星主要由三部分组成
+                            ：返回舱、仪器舱和部件舱。返回舱是球形密封结构，壳体由铝合金材料制造，外表面有热防护涂层，壳体上有安装维护仪器的舱口。仪器舱是锥体和柱体相结合的密封结构，外部安装仪器和运动控制系统、温度调节系统部件，指控测量系统和遥测控制系统天线，制动<a
+                                href="">发动机</a>装置，内部是保障设备。部件舱是柱形密封结构，装有化学电源和温度调节系统部件。
+                        </p>
+                    </div>
+                    <div class="intro">
+                        <h2 class="title-text">“光子”M4科学试验任务</h2>
+                    </div>
+                    <p>
+                        “光子”M4卫星的飞行试验是对国际空间站俄罗斯舱段应用科学研究的重要补充，其任务主要是进行生物医学试验、科学项目试验和太空材料研究试验。</p>
+                    <p>“光子”M4 卫星的太空生物医学研究包括 8 项试验 ：</p>
+                    <p>
+                        ①“壁虎”F4（ГЕККОН-Ф4）试验，主要目的是研究微重力对成年动物机体的影响、它们的性行为及胚胎发育，试验过程进行连续的视频记录。</p>
+                    <p>②“荧光探测器”（ФЛУОТРЕК）试验将研究太空飞行中细胞内系统状态的变化动态。为此在不同的飞行阶</p>
+                    <p>段，借助荧光探测器记录线粒体的膜能量，以及分析温度对试管内细胞功能调节过程的影响。</p>
+                    <p>
+                        ③研究利用微生物获得电的过程，在失重条件下发电，在“生物电学”（БИОЭЛЕКТРИЧЕСТВО）试验框架下进行。研究目标是电极（阳极和阴极）和微生物燃料构成的离子交换膜，以及微生物团体和纯微生物发电机。
+                    </p>
+                    <p>④“微生物生长”（БИОФРОСТ）试验的目的是研究太空飞行对来自多年冻土层的微生物综合体的影响。</p>
+                    <p>⑤“ 微 生 物 辐 射 -
+                        F”（БИОРАДИАЦИЯ-Ф）试验研究太空离子辐射的性能，及其对暴露在宇宙空间和卫星内部的生物体的影响效果，研究对象是干燥的种子，蚕卵及其他不需要在太空飞行中维持生命活动的生物体。
+                    </p>
+                    <p>⑥“ 陨 石 ”（МЕТЕОРИТ）试验用于研究微生物在模拟陨石和小行星的材料中的生存能力。</p>
+                    <p>
+                        ⑦“真菌学”（МИКОЛОГИЯ）试验开展纯菌类微生物、侧耳，以及叶状体蘑菇共生体（绿皮地卷）在太空飞行中的生长和发展结构功能研究。</p>
+                    <p>⑧ “ 生 物 变 化
+                        ”（БИОТРАНСФОРМАЦИЯ）试验的研究对象是有氧微生物培养。试验目的是用微生物方法研究聚乙烯薄膜降解的过程。</p>
+                    <p>
+                        俄罗斯将一颗“日冕-光子”（Coronas-Photon）科研卫星送入太空这颗“日冕-光子”卫星将从近地轨道研究太阳活动，是俄罗斯“日冕”计划三颗卫星中的最后一颗，前两颗卫星“日冕”-I和“日冕”-F分别于1994年和2001年升空。“日冕-光子”卫星将研究太阳大气层中自由能量积聚的过程、高速粒子现象和<a
+                            href="">太阳耀斑</a>，以及太阳活动与地球<a href="">磁暴</a>之间的相互关系。<sup>
+                            [2]</sup>
+                    </p>
+                    <p>
+                        2014年9月1日，俄罗斯生物技术卫星“光子-M”4号着陆舱成功返回地面，着陆在俄罗斯奥伦堡州。舱内有用于科学实验的壁虎、果蝇、生物种子和微生物，还有22套科学仪器。“光子-M”4号于7月19日从哈萨克斯坦拜科努尔发射场发射，目的是在微重力条件下获得失重的新知识、探究半导体材料生产工艺、改进生物医学药物性能以及开展生物和生物技术科学研究。卫星重6280千克，其中科学设备重850千克。<sup>
+                            [3]</sup>
+                    </p>
+                    <dl class="cankao">
+                        <dt class="ck-title">参考资料</dt>
+                        <dd class="ck-dd">
+                            <ul class="ck-list">
+                                <li>
+                                    <span class="index">1.</span>
+                                    <a href="">&nbsp;&nbsp;</a>
+                                    <a href="" class="text">俄罗斯“光子”科学卫星解密<span>&nbsp;</span></a>
+                                    <span class="site">．中国知网</span><span>．2014-11-07</span><span>[引用日期2016-11-19]</span>
+                                </li>
+                                <li>
+                                    <span class="index">2.</span>
+                                    <a href="">&nbsp;&nbsp;</a>
+                                    <a href="" class="text">俄罗斯发射“日冕-光子”太阳观测卫星<span>&nbsp;</span></a>
+                                    <span
+                                        class="site">．中国航天科技集团公司</span><span>．2009/02/03</span><span>[引用日期2016-11-20]</span>
+                                </li>
+                                <li>
+                                    <span class="index">3.</span>
+                                    <a href="">&nbsp;&nbsp;</a>
+                                    <a href="" class="text">俄罗斯生物技术卫星“光子-M”4号着陆舱成功返回地面<span>&nbsp;</span></a>
+                                    <span
+                                        class="site">．中国人民网</span><span>．2014-09-02</span><span>[引用日期2016-11-20]</span>
+                                </li>
+                            </ul>
+                        </dd>
+                    </dl>
+                </div>
+                <div class="side-content">
+                    <div class="summary-pic">
+                        <a href="">
+                            <img src="img/火箭.jpg">
+                        </a>
+                    </div>
+                    <div>
+                        <div class="professional-header">
+                            <div style="background-image: url(img/花.png)">
+                                <h2>科普中国</h2>
+                                <p>致力于权威的科学传播</p>
+                            </div>
+                        </div>
+                        <div class="professional-content">
+                            <div class="professional-title">
+                                <h3>本词条认证专家为</h3>
+                            </div>
+                            <div style="width: 242px; position: absolute;">
+                                <ul>
+                                    <li>
+                                        <div class="pro-line"></div>
+                                        <div>
+                                            <div>
+                                                <div>张明霞 | 高级工程师</div>
+                                                <div>中航工业庆安集团有限公司</div>
+                                            </div>
+                                    </li>
+                                </ul>
                             </div>
                         </div>
                     </div>
